--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,15 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>arhaan jafri</title>
+    <style>
+    @font-face {
+      font-family: 'Geist Mono';
+      src: url('/fonts/GeistMono-ExtraBold.woff2') format('woff2');
+      font-weight: 700;
+      font-style: normal;
+      font-display: swap;
+    }
+    </style>
   </head>
   <body>
     <div id="root"></div>
