--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -11,7 +11,7 @@
     <style>
     @font-face {
       font-family: 'Geist Mono';
-      src: url('/fonts/GeistMono-ExtraBold.woff2') format('woff2');
+      src: url('/fonts/GeistMono-Black.woff2') format('woff2');
       font-weight: 700;
       font-style: normal;
       font-display: swap;
